Contrast colour improvements (spelling and aggresive text fixes too)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,10 +22,6 @@ html, body {
       padding-top: 6rem;
     }
   }
-
-  .is-long{
-    width: 150px;
-  }
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -73,20 +69,19 @@ nav.navbar {
     max-height: initial;
   }
 
-  .navbar-item{
+  .navbar-item {
     padding: 0.5rem 1.75rem
   }
 
   .navbar-burger {
     height: initial;
-    margin-right: 1.5rem;
 
     span {
       height: 2px;
     }
   }
 
-  .navbar-center{
+  .navbar-center {
     margin: auto;
     width: max-content;
     display: inline;
